updated alignment issue

--- a/src/app/controls/breadcrumb/breadcrumb.component.scss
+++ b/src/app/controls/breadcrumb/breadcrumb.component.scss
@@ -1,7 +1,7 @@
 @import "styles-dir";
 
 .breadcrumb {
-  display: flex;
+ // display: flex;
   align-items: center;
     font-size: $font-size-xll;
     color: var(--color-Gray34); // Default color for parent items
